[package]
name = "cnblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
filetime = "0.2.15"
iso8601 = "0.4.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex = "1.5.4"
rusqlite = "0.26.3"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
syn = "1.0.86"
tempfile = "3.3.0"
walkdir = "2.3.2"
xmlrpc = "0.15.1"
