[package]
name = "cnblog"
version = "0.1.0"
edition = "2021"
authors = ["nsfoxer <muwuren@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = { version="3.1.17", features=["derive"]}
dirs = "4.0.0"
filetime = "0.2.15"
iso8601 = "0.4.1"
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
syn = "1.0.86"
tempfile = "3.3.0"
walkdir = "2.3.2"
xmlrpc = "0.15.1"
